[package]
name = "shuttle-core"
description = "Library to read, write, hash, and sign the xdr structures used in the Stellar Network."
version = "0.2.0"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
license = "Apache-2.0"
repository = "https://github.com/fracek/shuttle-core"
readme = "README.md"
keywords = ["stellar", "blockchain"]


[dependencies]
byteorder = "1"
base32 = "0.3.1"
crc16 = "0.3.4"
sodiumoxide = "0.0.16"
base64 = "0.9.0"
num-traits = "0.1.41"
num-bigint = "0.1.41"
bigdecimal = "0.0.10"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_bytes = "0.10.3"
serde-xdr = "0.5.0"