[package]
name = "shuttle-core"
description = "Library to read, write, hash, and sign the xdr structures used in the Stellar Network."
version = "0.3.1"
authors = ["Francesco Ceccon <francesco@ceccon.me>"]
license = "Apache-2.0"
documentation = "https://docs.rs/shuttle-core"
repository = "https://github.com/fracek/shuttle-core"
readme = "README.md"
keywords = ["stellar", "blockchain"]


[dependencies]
byteorder = "1"
base32 = "0.4.0"
crc16 = "0.4.0"
sodiumoxide = "0.2.2"
base64 = "0.10.1"
num-traits ="0.2.8"
num-bigint = "0.2.2"
bigdecimal = "0.1.0"
serde = "1.0.98"
serde_derive = "1.0.98"
serde_bytes = "0.11.2"
serde-xdr = "0.5.1"

curve25519-dalek = "1.2.3"
ed25519-dalek = {git = "https://github.com/dalek-cryptography/ed25519-dalek"}